<resources>
    <string name="app_name">Feeds</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="title_hot_tracks">Hot Tracks</string>
    <string name="title_new_release">New Relases</string>
    <string name="title_top_albums">Top Albums</string>
    <string name="title_top_songs">Top Songs</string>


    <string name="check_internet">Please check your internet connection</string>

    <string name="artist_name"><b>Artist : </b></string>
    <string name="song_name"><b>Artist : </b></string>
    <string name="release_date"><b>Release Date : </b></string>
    <string name="genre"><b>Genre : </b></string>
    <string name="copyright"><b>Copyright : </b></string>

</resources>
